--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=chatop
 server.port=3001
+app.base-url=http://localhost:${server.port}
 
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&serverTimezone=Europe/Paris
 spring.datasource.username=${DB_USER}
@@ -12,3 +13,6 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Paris
 spring.jackson.time-zone=Europe/Paris
 
 springdoc.swagger-ui.path=/swagger-ui.html
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
